--- a/home_page/home.css
+++ b/home_page/home.css
@@ -5,10 +5,12 @@
     font-family: 'Kode Mono';
 }
 
-
+#logo{
+    width: 75%;
+}
 
 .navbar{
-    background: #131313;
+    background: #2b2929;
     height: 80px;
     display: flex;
     justify-content: center;
@@ -30,9 +32,10 @@
     padding: 0 50px;
 }
 
+
 #navbar_logo{
     width: 200px;
-    padding: 0 50px;
+    padding: 20px 50px;
     display:flex;
     align-items: center;
     cursor:pointer;
@@ -183,7 +186,7 @@
 
 
 .main{
-    background-color:#131313 ;
+    background-color:#2b2929 ;
 }
 
 .main_container{
@@ -317,11 +320,11 @@
 }
 
 .learn{
-    background: #409fff;
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 100vh;
+    background-image: url('/assets/WEBdesign_idea.png')
 }
 
 .learn h1{
@@ -498,7 +501,7 @@
 }
 
 .footer_container{
-    background-color: #141414;
+    background-color: #2b2929;
     padding: 5rem 0;
     display: flex;
     flex-direction: column;
