--- a/login_page/login_page.css
+++ b/login_page/login_page.css
@@ -191,7 +191,7 @@
     align-items: center;
     width: fit-screen;
     height: 700px;
-    background: url('/assets/design\ desfocado.png') no-repeat;
+    background: url('/assets/WEBdesign_idea.png') no-repeat;
 }
 
 .login-box{
