--- a/home_page/home.css
+++ b/home_page/home.css
@@ -329,7 +329,7 @@
 
 .learn h1{
     background-color: #409fff;
-    background-image: linear-gradient(to right, #fff 0%, #ff76f4 50%, #ad2ca7 100%);
+    background-image: linear-gradient(to right, #000000 0%, #2339b3 50%, #e029d7 100%);
     background-size: 100%;
     margin-bottom: 5rem;
     font-size: 2.5rem;
