--- a/login_page/login_page.css
+++ b/login_page/login_page.css
@@ -70,7 +70,7 @@
     width: 100%;
 }
 
-.button{
+.btnLogin-popup{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -83,6 +83,7 @@
     border-radius: 4px;
     background: #409fff;
     color: #fff; 
+    cursor: pointer;
 }
 
 .button:hover{
@@ -154,11 +155,12 @@
         right: 5%;
         transform: translate(5%, 20%);
     }
+
 .navbar_btn{
     padding-bottom: 2rem;
 }
 
-.button{
+.btnLogin-popup{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -206,7 +208,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
+    transform: scale(0);
+    transition: transform .5s ease,height .2s ease;
 }
+
+.login-box.active-popup{
+    transform: scale(1);
+
+}
+
 
 .login-box .form-box{
     width: 100%;
@@ -266,7 +277,7 @@
 }
 
 
-.rember-forgot{
+.remember-forgot{
     font-size: .9em;
     color: #162938;
     font-weight: 500;
@@ -280,16 +291,93 @@
     margin-right: 3px;
 }
 
+.remember-forgot a{
+    color: #162938;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.remember-forgot a:hover{
+    text-decoration: underline;
+}
+
+.btn-sub{
+    width: 100%;
+    height: 45px;
+    background: #162938;
+    border: none;
+    outline: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 1em;
+    color: #fff;
+    font-weight: 500;
+}
+
+.login-register{
+    font-size: .9em;
+    color: #162938;
+    text-align: center;
+    font-weight: 500;
+    margin: 25px 0 10px;
+}
+
+.login-register p a{
+    color: #162938;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.login-register p a:hover{
+    text-decoration: underline;
+}
+
+.login-register a{
+    padding-left: 5px;
+}
+
+.login-box .icon-close{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 45px;
+    height: 45px;
+    background: #162938;
+    font-size: 2em;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom-left-radius: 20px;
+    cursor: pointer;
+    z-index: 1;
+}
 
 
+.login-box .form-box.register{
+    position: absolute;
+    transition: none;
+    transform:translateX(400px);
+}
 
+.login-box.active .form-box.register{
+    transition: transform .18s ease;
+    transform: translateX(0);
+}
 
+.login-box.active{
+    height: 520px;
+}
 
+.login-box .form-box.login{
+    transition: transform .18s ease;
+    transform: translateX(0);
+}
 
-
-
-
-
+.login-box.active .form-box.login{
+    transition: none;
+    transform: translateX(-400px);
+}
 
 
 
