--- a/login_page/login_page.css
+++ b/login_page/login_page.css
@@ -106,6 +106,8 @@
         width: 100%;
         max-width: 1300px;
         padding: 0;
+        margin-bottom: 80px;
+
     }
 
     .navbar_menu{
