--- a/aboutUs_page/aboutUs_page.css
+++ b/aboutUs_page/aboutUs_page.css
@@ -255,7 +255,6 @@
     align-items: center;
     flex-wrap: wrap;
     margin-top: 20px;
-
 }
 
 .about-image{
@@ -324,6 +323,7 @@
 
 .about-content{
     flex: 1;
+    text-align: center;
 }
 
 .about-content h2{
@@ -347,16 +347,59 @@
     background-color: #e029d7;
 }
 
+.about-content2{
+    flex: 1;
+}
 
+.about-content2 h2{
+    font-size: 23px;
+    margin-bottom: 15px;
+    color: #000000;
+    text-align: center;
+}
 
+.about-content2 p{
+    font-size: 18px;
+    line-height: 1.5;
+    color: #131313;
+}
 
+.about-content2 h2::after{
+    content: "";
+    width: 100%;
+    height: 4px;
+    display: block;
+    margin: 0 auto;
+    background-color: #e029d7;
+}
 
+@media screen and (max-width: 960px){
+    .about-image img{
+        max-width: 70%;
+    }
 
+    .about-image2 img{
+        max-width: 70%;
+    }
 
+    .about-content h2{
+        text-align: center;
+    }
 
+    .about-content p{
+        text-align: center;
+    }
 
+    .about-content ul{
+        margin-left: 2rem;
+        text-align: center;
+    }
 
-
+    .about-image3 img{
+        max-width: 80%;
+        margin: 0 -2rem;
+    }
+}
 
 
 .footer_container{
