--- a/escape_room/escape_room.css
+++ b/escape_room/escape_room.css
@@ -5,7 +5,7 @@
     font-family: 'Kode Mono';
 }
 
-/* Navbar styles */
+
 .navbar {
     background: #2b2929;
     height: 80px;
@@ -179,7 +179,7 @@
     }
 }
 
-/* Popup styles */
+
 .popup {
     display: none;
     position: fixed;
@@ -270,7 +270,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('/assets/design\ desfocado.png'); /* Replace with your background image URL */
+    background-image: url('/assets/design\ desfocado.png'); 
     background-size: cover;
     background-position: center;
     display: flex;
@@ -306,7 +306,7 @@
     background-color: #409fff;
     border-radius: 10px;
     cursor: pointer;
-    z-index: 1001; /* Make sure it is on top of the image */
+    z-index: 1001; 
     color: #fff;
     border: none;
 }
@@ -316,7 +316,7 @@
 }
 
 #gameContainer {
-    margin-top: 50px; /* Adjust based on nav bar height */
+    margin-top: 50px; 
     position: relative;
 }
 
