--- a/styles/account_page.css
+++ b/styles/account_page.css
@@ -96,6 +96,7 @@
 
 }
 
+
 @media screen and (max-width: 960px) {
     .navbar_container{
         display: flex;
@@ -365,6 +366,9 @@
     display: flex;
     flex-direction: column;
     margin: 0 20px;
+}
+.input-container textarea{
+    resize: none;
 }
 
 .input-container label{
