--- a/styles/admin.css
+++ b/styles/admin.css
@@ -179,10 +179,17 @@
     }
 }
 
+.main{
+    background: url('/assets/design\ desfocado.png');
+    padding-top: 5rem;
+    padding-bottom: 9.5rem;
+    height: 41.72rem;
+}
+
 .main_title h1{
     display: flex;
     justify-content: center;
-    margin-top: 40px;
+    margin-top: 6rem;
 }
 
 .main_title h1::after{
@@ -200,9 +207,8 @@
     width: 100%;
     max-width: 1300px;
     margin: 0 auto;
-    margin-top: 4rem;
+    margin-top: 10rem;  
 }
-
 
 .table_header{
     background-color: #2b2929;
@@ -214,6 +220,26 @@
 td{
     text-align: center;
     padding-top: 10px;
+}
+
+.btn_delete{
+    background-color: #409fff;
+    color: #fff;
+    border: none;
+    outline: none;
+    border-radius: 4px;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+.btn_block{
+    background-color: #409fff;
+    color: #fff;
+    border: none;
+    outline: none;
+    border-radius: 4px;
+    padding: 10px 20px;
+    cursor: pointer;
 }
 
 .footer_container{
